# gpt5.2-codex_xhigh-proof-of-concept-GBA-emulator-in-assembly-

./: CMakeLists.txt  README.md
include/: gba_core.h  gba_keys.h
src/asm/: core.asm  gba_core.inc
src/asm/apu/: mixer.asm
src/asm/cpu/: step.asm
src/asm/ppu/: scanline.asm
src/asm/sys/: timer.asm
src/host/: host_bridge.c  main.c
tests/: smoke.sh
